@@ -23,6 +23,7 @@ The following bugs have been fixed in the 1.4.2 release.
 	not delivered methods
 6679333	missing quotes around zero length parameter values
 GF 4997	BASE64DecoderStream.skip (etc) skips the wrong number of octets
+GF 5189	Can't specify SSLSocketFactory for STARTTLS in Javamail 1.4
 <no id>	ignore socket timeout while waiting in IMAP IDLE
 <no id>	fix bug in MailDateFormat parsing in non-lenient mode
 <no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
@@ -36,6 +37,7 @@ GF 4997	BASE64DecoderStream.skip (etc) skips the wrong number of octets
 <no id>	add mail.mime.ignoreunknownencoding system property (see MimeUtility)
 <no id>	ignore errors from SMTP RSET command
 <no id>	InternetAddress - detect more errors when strict, accept more when not
+<no id>	add mail.<protocol>.socketFactory and .SSLSocketFactory properties
 
 
 		  CHANGES IN THE 1.4.1 RELEASE
